unpackaged/main/default/objects/Case/fields/Accessibility_Structural__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Structural__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessibility (Structural)</label>
    <type>Checkbox</type>
</CustomField>