unpackaged/main/default/objects/Case/fields/Actual_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Incentive_Amount__c</fullName>
    <label>Actual Incentive Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>