unpackaged/main/default/objects/Case/fields/Add_t_Ground_Mount_Info_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_t_Ground_Mount_Info_Date__c</fullName>
    <label>Add’t Ground Mount Info Date</label>
    <type>Date</type>
</CustomField>