unpackaged/main/default/objects/Case/fields/Add_t_Ground_Mount_Info_Notes__c.field-meta.xml
<CustomField>
    <fullName>Add_t_Ground_Mount_Info_Notes__c</fullName>
    <label>Add’t Ground Mount Info Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>