unpackaged/main/default/objects/Case/fields/Adder_Quote__c.field-meta.xml
<CustomField>
    <fullName>Adder_Quote__c</fullName>
    <label>Adder Quote</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>