unpackaged/main/default/objects/Case/fields/Adders__c.field-meta.xml
<CustomField>
    <fullName>Adders__c</fullName>
    <label>Adders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Plywood</fullName>
            </value>
            <value>
                <fullName>Multiple MPS</fullName>
            </value>
            <value>
                <fullName>Poor Access</fullName>
            </value>
            <value>
                <fullName>Steep Roof</fullName>
            </value>
            <value>
                <fullName>Flashing Work</fullName>
            </value>
            <value>
                <fullName>Fascia Replacement</fullName>
            </value>
            <value>
                <fullName>Existing Leaks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>