unpackaged/main/default/objects/Case/fields/Adders_MPU_Other_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Adders_MPU_Other_Accepted__c</fullName>
    <label>Adders MPU/Other Accepted</label>
    <type>TextArea</type>
</CustomField>