unpackaged/main/default/objects/Case/fields/Additional_Contributing_ICO_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contributing_ICO_Reasons__c</fullName>
    <label>Additional Contributing ICO Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Design - Layout</fullName>
            </value>
            <value>
                <fullName>System Design - Electrical</fullName>
            </value>
            <value>
                <fullName>System Design - Structural</fullName>
            </value>
            <value>
                <fullName>Customer - Payment Term Discrepancy</fullName>
            </value>
            <value>
                <fullName>Customer - HOA Approval Conflict</fullName>
            </value>
            <value>
                <fullName>Customer - Sales Education Issue</fullName>
            </value>
            <value>
                <fullName>Customer - Unfulfilled Obligations</fullName>
            </value>
            <value>
                <fullName>Site Conditions - Roof Condition</fullName>
            </value>
            <value>
                <fullName>Site Conditions - Roof Accessibility</fullName>
            </value>
            <value>
                <fullName>Site Conditions - Roof Obstruction</fullName>
            </value>
            <value>
                <fullName>Site Conditions - Safety</fullName>
            </value>
            <value>
                <fullName>Site Conditions - Electrical Condition</fullName>
            </value>
            <value>
                <fullName>Site Conditions - Electrical Access</fullName>
            </value>
            <value>
                <fullName>Site Conditions - Structural Condition</fullName>
            </value>
            <value>
                <fullName>Weather - Rain</fullName>
            </value>
            <value>
                <fullName>Weather - Snow</fullName>
            </value>
            <value>
                <fullName>Weather - Wind</fullName>
            </value>
            <value>
                <fullName>Weather - Heat</fullName>
            </value>
            <value>
                <fullName>Other Incidentals - Injury</fullName>
            </value>
            <value>
                <fullName>Other Incidentals - Illness</fullName>
            </value>
            <value>
                <fullName>Other Incidentals - Materials</fullName>
            </value>
            <value>
                <fullName>Other Incidentals - Scheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>