unpackaged/main/default/objects/Case/fields/Additional_doc_completed_date__c.field-meta.xml
<CustomField>
    <fullName>Additional_doc_completed_date__c</fullName>
    <label>Additional doc completed date</label>
    <type>Date</type>
</CustomField>