unpackaged/main/default/objects/Case/fields/Additional_doc_needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_doc_needed__c</fullName>
    <label>Additional doc needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wind Calcs Page</fullName>
            </value>
            <value>
                <fullName>Firepath Load Page</fullName>
            </value>
            <value>
                <fullName>Snowload Calc Page</fullName>
            </value>
            <value>
                <fullName>Final Affidavit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>