unpackaged/main/default/objects/Case/fields/Additional_Electrical_Photos_Needed_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Electrical_Photos_Needed_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Electrical Photos Needed</label>
    <type>Checkbox</type>
</CustomField>