unpackaged/main/default/objects/Case/fields/Additional_Pre_Construction_Work_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Pre_Construction_Work_Notes__c</fullName>
    <label>Additional Pre-Construction Work Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>