unpackaged/main/default/objects/Case/fields/Additional_Roof_Photos_Needed_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Roof_Photos_Needed_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Roof Photos Needed</label>
    <type>Checkbox</type>
</CustomField>