unpackaged/main/default/objects/Case/fields/Additional_Roof_Photos_Needed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Roof_Photos_Needed_Notes__c</fullName>
    <label>Additional Roof Photos Needed Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>