unpackaged/main/default/objects/Case/fields/Additional_Structural_Photos_Needed_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Structural_Photos_Needed_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Structural Photos Needed</label>
    <type>Checkbox</type>
</CustomField>