unpackaged/main/default/objects/Case/fields/Additional_Structural_Photos_Needed_Note__c.field-meta.xml
<CustomField>
    <fullName>Additional_Structural_Photos_Needed_Note__c</fullName>
    <label>Additional Structural Photos Needed Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>