unpackaged/main/default/objects/Case/fields/AHJ_Setbacks__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Setbacks__c</fullName>
    <label>AHJ Setbacks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>