unpackaged/main/default/objects/Case/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <description>This is for display the red bar at top of record page layout.</description>
    <formula>IF(Opportunity__r.Open_Retention_Case__c, IMAGE('/resource/Alert_Icon', 'warning', 30, 30), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert</label>
    <type>Text</type>
</CustomField>