unpackaged/main/default/objects/Case/fields/Alt_Address__c.field-meta.xml
<CustomField>
    <fullName>Alt_Address__c</fullName>
    <label>Alt Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>