unpackaged/main/default/objects/Case/fields/Amount_Drawn_From_Commission_PreCon__c.field-meta.xml
<CustomField>
    <fullName>Amount_Drawn_From_Commission_PreCon__c</fullName>
    <label>Amount Drawn From Commission - PreCon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>