unpackaged/main/default/objects/Case/fields/Amount_Financed_by_Customer_PreCon__c.field-meta.xml
<CustomField>
    <fullName>Amount_Financed_by_Customer_PreCon__c</fullName>
    <label>Amount Financed by Customer - PreCon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>