unpackaged/main/default/objects/Case/fields/Amount_Paid_by_Palmetto_PreCon__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_Palmetto_PreCon__c</fullName>
    <label>Amount Paid by Palmetto - PreCon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>