unpackaged/main/default/objects/Case/fields/Anticipated_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Payment_Date__c</fullName>
    <label>Anticipated Payment Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mid-Jan</fullName>
            </value>
            <value>
                <fullName>mid-Apr</fullName>
            </value>
            <value>
                <fullName>mid-Jul</fullName>
            </value>
            <value>
                <fullName>mid-Oct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>