unpackaged/main/default/objects/Case/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>App #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>