unpackaged/main/default/objects/Case/fields/As_built_Diagram__c.field-meta.xml
<CustomField>
    <fullName>As_built_Diagram__c</fullName>
    <label>As built Diagram</label>
    <type>Date</type>
</CustomField>