unpackaged/main/default/objects/Case/fields/As_built_Notes__c.field-meta.xml
<CustomField>
    <fullName>As_built_Notes__c</fullName>
    <inlineHelpText>Used to document install issues</inlineHelpText>
    <label>As-built Notes</label>
    <type>Date</type>
</CustomField>