unpackaged/main/default/objects/Case/fields/As_built_Plan_Comp_date__c.field-meta.xml
<CustomField>
    <fullName>As_built_Plan_Comp_date__c</fullName>
    <label>As-built Plan Comp date</label>
    <type>Date</type>
</CustomField>