unpackaged/main/default/objects/Case/fields/At_Fault__c.field-meta.xml
<CustomField>
    <fullName>At_Fault__c</fullName>
    <label>At Fault</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>