unpackaged/main/default/objects/Case/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Who will receive/implement the training?</description>
    <inlineHelpText>Who will receive/implement the training?</inlineHelpText>
    <label>Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>