unpackaged/main/default/objects/Case/fields/Azimuth_Error__c.field-meta.xml
<CustomField>
    <fullName>Azimuth_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Azimuth Error</label>
    <type>Checkbox</type>
</CustomField>