unpackaged/main/default/objects/Case/fields/Backed_up_load_schedule__c.field-meta.xml
<CustomField>
    <fullName>Backed_up_load_schedule__c</fullName>
    <label>Backed up load schedule</label>
    <type>TextArea</type>
</CustomField>