unpackaged/main/default/objects/Case/fields/Battery_Qty__c.field-meta.xml
<CustomField>
    <fullName>Battery_Qty__c</fullName>
    <formula>Opportunity__r.Battery_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battery Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>