unpackaged/main/default/objects/Case/fields/BBB_Review__c.field-meta.xml
<CustomField>
    <fullName>BBB_Review__c</fullName>
    <label>BBB Review</label>
    <type>Date</type>
</CustomField>