unpackaged/main/default/objects/Case/fields/Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount__c</fullName>
    <label>Billed Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>