unpackaged/main/default/objects/Case/fields/Build_Only__c.field-meta.xml
<CustomField>
    <fullName>Build_Only__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Only</label>
    <referenceTo>Build_Only__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>