unpackaged/main/default/objects/Case/fields/Build_Partner1__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Partner</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>