unpackaged/main/default/objects/Case/fields/Build_Partner__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner__c</fullName>
    <label>Build Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Build_Partners</valueSetName>
    </valueSet>
</CustomField>