unpackaged/main/default/objects/Case/fields/Call_attempt_1__c.field-meta.xml
<CustomField>
    <fullName>Call_attempt_1__c</fullName>
    <label>Call attempt 1</label>
    <type>Date</type>
</CustomField>