unpackaged/main/default/objects/Case/fields/Call_attempt_2__c.field-meta.xml
<CustomField>
    <fullName>Call_attempt_2__c</fullName>
    <label>Call attempt 2</label>
    <type>Date</type>
</CustomField>