unpackaged/main/default/objects/Case/fields/Call_attempt_3__c.field-meta.xml
<CustomField>
    <fullName>Call_attempt_3__c</fullName>
    <label>Call attempt 3</label>
    <type>Date</type>
</CustomField>