unpackaged/main/default/objects/Case/fields/Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>