unpackaged/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF(ISBLANK(ClosedDate), TODAY()-DATEVALUE(CreatedDate), DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate))</formula>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>