unpackaged/main/default/objects/Case/fields/Case_Approver__c.field-meta.xml
<CustomField>
    <fullName>Case_Approver__c</fullName>
    <label>Case Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Market Manager</fullName>
            </value>
            <value>
                <fullName>Ops Director</fullName>
            </value>
            <value>
                <fullName>CXO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>