unpackaged/main/default/objects/Case/fields/Case_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_to__c</fullName>
    <label>Case Assigned to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alejandra Torricos</fullName>
            </value>
            <value>
                <fullName>Amy Denheyer</fullName>
            </value>
            <value>
                <fullName>Ana Havliand</fullName>
            </value>
            <value>
                <fullName>Dawn Heck</fullName>
            </value>
            <value>
                <fullName>Machias Schoen</fullName>
            </value>
            <value>
                <fullName>Mary Cole</fullName>
            </value>
            <value>
                <fullName>Meghan Eggers</fullName>
            </value>
            <value>
                <fullName>Sandy Feliz Dominguez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>