unpackaged/main/default/objects/Case/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <label>Case Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal (Market Mgr Name, CX Name, Service Sales Name)</fullName>
            </value>
            <value>
                <fullName>Sunnova</fullName>
            </value>
            <value>
                <fullName>Sun Systems Technology</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Ability to add more Third Party Contractors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>