unpackaged/main/default/objects/Case/fields/Case_Owner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Notes__c</fullName>
    <label>Case Owner Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>