unpackaged/main/default/objects/Case/fields/Case_Reassigned_to__c.field-meta.xml
<CustomField>
    <fullName>Case_Reassigned_to__c</fullName>
    <label>Case Reassigned to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>