unpackaged/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay in Stage</fullName>
            </value>
            <value>
                <fullName>Install Issues</fullName>
            </value>
            <value>
                <fullName>Service Call</fullName>
            </value>
            <value>
                <fullName>Negative Review</fullName>
            </value>
            <value>
                <fullName>Financier Compliance</fullName>
            </value>
            <value>
                <fullName>Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Re-Roof</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade</fullName>
            </value>
            <value>
                <fullName>Structural Upgrade</fullName>
            </value>
            <value>
                <fullName>Trenching</fullName>
            </value>
            <value>
                <fullName>Ground Mount Coordination</fullName>
            </value>
            <value>
                <fullName>Additional Adder Coordination</fullName>
            </value>
            <value>
                <fullName>Re-Design</fullName>
            </value>
            <value>
                <fullName>Customer Requested Change</fullName>
            </value>
            <value>
                <fullName>QC Fail</fullName>
            </value>
            <value>
                <fullName>Pre-Install Change</fullName>
            </value>
            <value>
                <fullName>Post-Install Change</fullName>
            </value>
            <value>
                <fullName>Contract Signed to Contract Received</fullName>
            </value>
            <value>
                <fullName>Contract Received to Design Queued</fullName>
            </value>
            <value>
                <fullName>Design Queued to Design Completed</fullName>
            </value>
            <value>
                <fullName>Design Completed to Permit Submitted</fullName>
            </value>
            <value>
                <fullName>Permit Submitted to Permit Approved</fullName>
            </value>
            <value>
                <fullName>Permit Approved to Installation Ready</fullName>
            </value>
            <value>
                <fullName>Installation Ready to Installation Scheduled</fullName>
            </value>
            <value>
                <fullName>Installation Scheduled to Installation Started</fullName>
            </value>
            <value>
                <fullName>Installation Started to Installation Completed</fullName>
            </value>
            <value>
                <fullName>Installation Completed to Inspection Scheduled</fullName>
            </value>
            <value>
                <fullName>Inspection Scheduled to Inspection Complete</fullName>
            </value>
            <value>
                <fullName>Inspection Complete to PTO Submitted</fullName>
            </value>
            <value>
                <fullName>PTO Submitted to PTO Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>