unpackaged/main/default/objects/Case/fields/Case_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Case_Urgency__c</fullName>
    <label>Case Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>