unpackaged/main/default/objects/Case/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>Type(C)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Adder Coordination</fullName>
            </value>
            <value>
                <fullName>Alchemy</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Customer Failing to Action</fullName>
            </value>
            <value>
                <fullName>Customer Requested</fullName>
            </value>
            <value>
                <fullName>Customer Requested Cancellation</fullName>
            </value>
            <value>
                <fullName>Customer Requested Change</fullName>
            </value>
            <value>
                <fullName>Customer Unresponsive</fullName>
            </value>
            <value>
                <fullName>Customer On Hold</fullName>
            </value>
            <value>
                <fullName>Delay in Stage</fullName>
            </value>
            <value>
                <fullName>Design Review</fullName>
            </value>
            <value>
                <fullName>Disqualification</fullName>
            </value>
            <value>
                <fullName>Document Collection</fullName>
            </value>
            <value>
                <fullName>Document Collection - CRC</fullName>
            </value>
            <value>
                <fullName>Electrical Review</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Expected offset / Savings</fullName>
            </value>
            <value>
                <fullName>Financier Compliance</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Ground Mount Coordination</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
            <value>
                <fullName>Incentive Submittal</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>