unpackaged/main/default/objects/Case/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permitting</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Interconnection</fullName>
            </value>
            <value>
                <fullName>AHJ inspection</fullName>
            </value>
            <value>
                <fullName>utility inspection</fullName>
            </value>
            <value>
                <fullName>Service Call</fullName>
            </value>
            <value>
                <fullName>Palmetto Owned</fullName>
            </value>
            <value>
                <fullName>CP Owned</fullName>
            </value>
            <value>
                <fullName>Government incentives</fullName>
            </value>
            <value>
                <fullName>Proposal is correct</fullName>
            </value>
            <value>
                <fullName>Proposal is incorrect</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Yelp</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Equipment failure</fullName>
            </value>
            <value>
                <fullName>Roof Leak</fullName>
            </value>
            <value>
                <fullName>Panels Installed incorrectly</fullName>
            </value>
            <value>
                <fullName>Bounce Check</fullName>
                <isActive>false</isActive>
                <label>Bounce Check</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Damaged Property</fullName>
                <isActive>false</isActive>
                <label>Damaged Property</label>
            </value>
            <value>
                <fullName>Delayed PTO/Double Bill</fullName>
                <isActive>false</isActive>
                <label>Delayed PTO/Double Bill</label>
            </value>
            <value>
                <fullName>Inspection</fullName>
                <isActive>false</isActive>
                <label>Inspection</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Production Loss</fullName>
                <isActive>false</isActive>
                <label>Production Loss</label>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
                <isActive>false</isActive>
                <label>Sales Rep</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>