unpackaged/main/default/objects/Case/fields/Change_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Reason__c</fullName>
    <formula>Text(Opportunity__r.Change_Order_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Order Reason</label>
    <type>Text</type>
</CustomField>