unpackaged/main/default/objects/Case/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <formula>Opportunity__r.Channel_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner</label>
    <type>Text</type>
</CustomField>