unpackaged/main/default/objects/Case/fields/Check_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Approved_Date__c</fullName>
    <label>Check Approved Date</label>
    <type>Date</type>
</CustomField>