unpackaged/main/default/objects/Case/fields/Check_paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_paid_Date__c</fullName>
    <label>Check paid Date</label>
    <type>Date</type>
</CustomField>