unpackaged/main/default/objects/Case/fields/Check_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Request_Date__c</fullName>
    <label>Check Request Date</label>
    <type>Date</type>
</CustomField>