unpackaged/main/default/objects/Case/fields/Check_to_be_mailed_by_Case_owner__c.field-meta.xml
<CustomField>
    <fullName>Check_to_be_mailed_by_Case_owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check to be mailed by Case owner</label>
    <type>Checkbox</type>
</CustomField>